kodekloud-ckad/mock2/q3deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: beta-apps
  name: beta-apps
spec:
  replicas: 3
  selector:
    matchLabels:
      run: beta-apps
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: beta-apps
    spec:
      containers:
      - image: nginx
        name: beta-apps
        resources: {}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: app_type
                operator: In
                values:
                - beta
status: {}

# run this command first
# kubectl label node node02 app_type=beta
