kodekloud-ckad/mock2/q7pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
spec:
  restartPolicy: Never
  containers:
  - name: jupiter
    image: nginx
  - name: europa
    image: busybox
    command: ["sleep"]
    args: ["4800"]
