kodekloud-ckad/mock2/q1svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    tier: frontend
  name: front-end-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    NodePort: 30083
  selector:
    tier: frontend
  type: NodePort
status:
  loadBalancer: {}
